--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
   <div class="card">
     <div class="card-top">
       <div class="pv-container"><span class="pageviews">100K</span>Pageviews</div>
-      <input class="pricing-range" type="range" name="pricing" />
+      <input class="price-range" type="range" name="price-range" id="price-range" min="0" max="4" />
       <div class="price-container">$<span class="price">16.00</span> /month</div>
-      <div class="billing"> Monthly Billing <input type="checkbox">Yearly Billing<span class="discount"> 25%
+      <div class="billing"> Monthly Billing <input type="checkbox" name="yearly_flg" id="yearly_flg">Yearly Billing<span class="discount"> 25%
           discount</span></div>
     </div>
     <div class="card-bottom">
@@ -58,6 +58,7 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div>
+  <script src="index.js"></script>
 </body>
 
 </html>
