Done toggle switch

--- a/index.html
+++ b/index.html
@@ -37,20 +37,29 @@
   </div>
   <div class="card">
     <div class="card-top">
-      <div class="pv-container"><span class="pageviews">100K</span>Pageviews</div>
+      <div class="pv-container"><span class="pageviews">100K </span>Pageviews</div>
       <div class="price-range-container">
         <div class="range-filled"></div>
         <input class="price-range" type="range" name="price-range" id="price-range" min="0" max="4" />
+      </div>
+      <div class="price-container"><span class="price">$16.00</span> /month</div>
+      <div class="billing">
+        <label for="yearly_flg" class="yearly_flg_container">
+          Monthly Billing
+          <div class="yearly_flg_toggle">
+            <input type="checkbox" name="yearly_flg" id="yearly_flg">
+          </div>
+          Yearly Billing
+          <span class="discount"> 25% discount</span>
+        </label>
+      </div>
     </div>
-      <div class="price-container">$<span class="price">16.00</span> /month</div>
-      <div class="billing"> <label for="yearly_flg"> Monthly Billing <input type="checkbox" name="yearly_flg" id="yearly_flg">Yearly Billing<span class="discount"> 25%
-          discount</span></label></div>
-    </div>
+    <hr>
     <div class="card-bottom">
       <ul>
-        <li> Unlimited websites</li>
-        <li> 100% data ownership</li>
-        <li>Email reports</li>
+        <li><img src="images/icon-check.svg"> Unlimited websites</li>
+        <li><img src="images/icon-check.svg"> 100% data ownership</li>
+        <li><img src="images/icon-check.svg"> Email reports</li>
       </ul>
       <button>Start my trial</button>
     </div>
