Fixed HTML errors (img and input)

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <div class="card-top">
       <div class="pv-container"><span class="pageviews">100K</span> Pageviews</div>
       <div class="price-range-container">
+        <label for="price-range"></label>
         <input class="price-range" type="range" name="price-range" id="price-range" min="0" max="4" />
         <div class="range-filled"></div>
       </div>
@@ -45,9 +46,9 @@
     <hr>
     <div class="card-bottom">
       <ul>
-        <li><img src="images/icon-check.svg"> Unlimited websites</li>
-        <li><img src="images/icon-check.svg"> 100% data ownership</li>
-        <li><img src="images/icon-check.svg"> Email reports</li>
+        <li><img alt="Icon-check" src="images/icon-check.svg"> Unlimited websites</li>
+        <li><img alt="Icon-check" src="images/icon-check.svg"> 100% data ownership</li>
+        <li><img alt="Icon-check" src="images/icon-check.svg"> Email reports</li>
       </ul>
       <button>Start my trial</button>
     </div>
