Fixed Toggle switch

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
       <div class="billing">
         <label for="yearly_flg" class="yearly_flg_container">
           Monthly Billing
-          <div class="yearly_flg_toggle">
+          <span class="yearly_flg_toggle">
             <input type="checkbox" name="yearly_flg" id="yearly_flg">
-          </div>
+          </span>
           Yearly Billing
           <span class="discount"> 25% <span>discount</span></span>
         </label>
